Compiler/antlr/test_cases/semantic_errors/err10_scope.tiger
main let
    var a: int;
in begin
    printi(a);
    let
        var a: float;
        var b: int;
    in
        printi(a);
    end
    printi(b);
end
